2003-03-15 Tomohiro KUBOTA <kubota@debian.org>

	* "configure --with-tools --with-scrollbars" didn't compile
	  any tools nor scroll bars.  Now it compiles all tools and
	  scroll bars.

2003-03-15 Araki Ken <arakiken@users.sf.net>

	* Changed doc/en/PROTOCOL format.
	  /dev/... can be specified before key(=value) now.
	* Forbidden config protocol 5380 because of security issues.

2003-03-10 Araki Ken <arakiken@users.sf.net>

	* Added --with-tools,--with-scrollbars options.

2003-03-09 Araki Ken <arakiken@users.sf.net>

	* -M/--menu option was bound to conf_menu_path_1 previously, but is to conf_menu_path_3 now.

2003-03-08 Araki Ken <arakiken@users.sf.net>

	* Removed --with-conf-menu option.
	* Added conf_menu_path_1,conf_menu_path_2,conf_menu_path3 options.
	* Ctrl+Left button launches mlterm-menu by default.

2003-03-08 Tomohiro KUBOTA <kubota@debian.org>

	* "wall_picture = none" in "main" configuration file now means
	  that the user doesn't use wall picture.  Previously, the same
	  configuration caused that mlterm complains "wall picture file
	  none is not found." (xwindow/x_term_manager.c, xwindow/x_screen.c)
	* mlconfig could not output the filename of the selected
	  wall paper, fixed (tool/mlconfig/x_wall_pic.[ch]).  This bug
	  might be introduced in 2003-03-01 and is my fault.
	* Cleaning up tool/mlconfig/mc_bgtype.c, using integer value
	  to store background type instead of string.

2003-03-08 Araki Ken <arakiken@users.sf.net>

	* Added --with-conf-menu option.
	* If Ctrl+F1 pressed continuously on FreeBSD, mlterm died. Fixed.
	  (Thanks to Konosuke Watanabe san)

2003-03-05 Tomohiro KUBOTA <kubota@debian.org>

	* The default BEL mode is "sound", not "none", at the help message.

2003-03-04 Tomohiro KUBOTA <kubota@debian.org>

	* mlconfig outputs "wall_picture = none" when background type
	  is transparent.
	* Added comments for "encoding" items of mlconfig and make these
	  comments and "auto" translatable.