@@ -33,6 +33,41 @@ selected(
 	return  1 ;
 }
 
+char *
+get_pty_title(char *dev)
+{
+	char query[256], *name;
+
+	if (strlen(dev) > 256-10) return strdup("");
+
+	sprintf(query, "%s:pty_name", dev);
+	name = mc_get_str_value(query);
+	return name;
+}  
+
+char *
+get_pty_entry(char *dev)
+{
+	char *title, *entry;
+
+	title = get_pty_title(dev);
+
+	if (title == NULL) return dev+5;
+	if (strcmp(title, dev)==0 || strlen(title)==0) {
+		free(title);
+		return dev+5;
+	}
+
+	entry = malloc(strlen(dev+5) + strlen(title) + 4);
+	if (entry) {
+		sprintf(entry, "%s (%s)", dev+5, title);
+		free(title);
+		return entry;
+	} else {
+		free(title);
+		return dev+5;
+	}
+}  
 
 /* --- global functions --- */
 
@@ -42,6 +77,7 @@ mc_pty_config_widget_new(void)
 	char *  my_pty ;
 	char *  pty_list ;
 	char *  ptys[MAX_TERMS];
+	char *title, *name;
 	int num;
 
 	my_pty = mc_get_str_value( "pty_name") ;
@@ -49,15 +85,22 @@ mc_pty_config_widget_new(void)
 
 	if (my_pty == NULL) return NULL;
 
-	ptys[0] = my_pty + 5;
+	ptys[0] = get_pty_entry(my_pty);
+
 	num = 1;
 	while( pty_list) {
-		if (strlen(my_pty) <= 5) break;
-		ptys[num] = pty_list + 5;
-		pty_list = strchr(pty_list, ':');
-		if (pty_list) *pty_list = 0; else break;
-		if (*(pty_list + 1) == '0') num++;
-		pty_list = strchr(pty_list + 1, ';');
+		char *p;
+
+		if (strlen(pty_list) <= 5) break;
+
+		p = strchr(pty_list, ':');
+		if (!p) break;
+		if (*(p+1) == '0') {
+			*p = 0;
+			ptys[num] = get_pty_entry(pty_list);
+			num++;
+		}
+		pty_list = strchr(p+1, ';');
 		if (pty_list) pty_list++;
 	}
 
@@ -72,6 +115,7 @@ mc_select_pty(void)
 	if( strcmp( new_pty , old_pty) != 0)
 	{
 		char *  dev ;
+		char *  space ;
 
 		if( ( dev = malloc( 5 + strlen( new_pty) + 1)) == NULL)
 		{
@@ -79,6 +123,8 @@ mc_select_pty(void)
 		}
 
 		sprintf( dev , "/dev/%s" , new_pty) ;
+		space = strchr(dev, ' ');
+		if (space) *space = 0;
 
 		mc_set_str_value( "select_pty" , dev) ;
 		mc_flush(mc_io_set);
