@@ -1,3 +1,7 @@
+2003-03-16 Tomohiro KUBOTA <kubota@debian.org>
+
+	* mlconfig shows window title of each ptys in pty list.
+
 2003-03-15 Tomohiro KUBOTA <kubota@debian.org>
 
 	* "configure --with-tools --with-scrollbars" didn't compile
